--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
 
     <div>
-        <h2 class="nav-item bg-dark p-5 text-white text-center">Spoken English by Yohan Gamage</h2>
+        <h2 class="nav-item bg-dark p-4 text-white text-center">Spoken English by Yohan Gamage</h2>
     </div>
 
 
-    <div class="row m-5">
+    <div class="row m-1">
         <div class="col-12">
         </div>
         <div class="col-12">
@@ -23,11 +23,11 @@
         </div>
       </div>
 
-      <div class="row m-5">
+      <div class="row m-1">
         <div class="col-12">
         </div>
         <div class="col-12">
-            <h3 class="text-center fw-bold">Spoken English - Diploma Course</h3>
+            <h3 class="text-center fw-bold"><br>Spoken English - Diploma Course</h3>
             <p><br>අපගේ නවතම Diploma පාඨමාලාව සමග ඔබටත් දැන් සම්බන්ධ විය හැක. <br><br>
                 
                 
@@ -57,7 +57,7 @@
                  <h6 class="text-center fw-bold">පලමු දින නොමිලේම සම්බන්ධ වන්න, පහත WhatsApp group එක සමඟ සම්බන්ධ වන්න. <br><br><br></h6>
 
                  <div class="d-grid gap-2 col-sm-12 col-md-12 col-lg-6 mx-auto">
-                    <a href="https://chat.whatsapp.com/GkT8zt5fhZC3fMhO4r3rRs" class="btn btn-success" role="button">Click to Join Whatsapp Group</a>
+                    <a href="https://chat.whatsapp.com/GkT8zt5fhZC3fMhO4r3rRs" class="btn btn-success m-auto" role="button">Click to Join Whatsapp Group</a>
                   </div>
 
                   <p><br><br></p>
