--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div>
-        <h2 class="nav-item bg-dark p-4 text-white text-center">Spoken English by Yohan Gamage</h2>
+        <h2 class="nav-item bg-dark p-4 text-white text-center">Smart Spoken English by Yohan Gamage</h2>
     </div>
 
 
@@ -125,7 +125,8 @@
             </div>
         </div>
         <div data-aos="zoom-in" class="col">
-            <img src="IMG/MOC - 4.jpg" class="img-fluid" alt="...">
+            <p><br></p>
+            <img src="IMG/MOC - 41.jpg" class="img-fluid center" alt="...">
         </div>
     </div>
 
@@ -158,7 +159,8 @@
             </div>
         </div>
         <div data-aos="zoom-in" class="col">
-            <img src="IMG/MOC - 5.jpg" class="img-fluid" alt="...">
+            <p><br></p>
+            <img src="IMG/MOC - 51.jpg" class="img-fluid" alt="...">
         </div>
     </div>
 
@@ -175,7 +177,8 @@
             </div>
         </div>
         <div data-aos="zoom-in" class="col">
-            <img src="IMG/MOC - 6.jpg" class="img-fluid" alt="...">
+            <p><br></p>
+            <img src="IMG/MOC - 61.jpg" class="img-fluid" alt="...">
         </div>
     </div>
 
@@ -205,7 +208,8 @@
             </div>
         </div>
         <div data-aos="zoom-in" class="col">
-            <img src="IMG/MOC - 8.jpg" class="img-fluid" alt="...">
+            <p><br></p>
+            <img src="IMG/MOC - 81.jpg" class="img-fluid" alt="...">
         </div>
     </div>
 
@@ -235,7 +239,8 @@
             </div>
         </div>
         <div data-aos="zoom-in" class="col">
-            <img src="IMG/MOC - 9.jpg" class="img-fluid" alt="...">
+            <p><br></p>
+            <img src="IMG/MOC - 91.jpg" class="img-fluid" alt="...">
         </div>
     </div>
 
