--- a/index.html
+++ b/index.html
@@ -8,21 +8,16 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>YGEC</title>
+    <title>Yohan Gamage</title>
 </head>
 
 <body>
-
-    <div>
-        <h2 class="nav-item bg-dark p-4 text-white text-center">Smart Spoken English by Yohan Gamage</h2>
-    </div>
-
 
     <div class="row m-1">
         <div class="col-12">
         </div>
         <div data-aos="fade-right" class="col-12">
-            <img src="IMG/imm 5.jpg" class="img-fluid w-100" alt="...">
+            <img src="IMG/imm 5.jpg" class="img-fluid w-80" alt="...">
         </div>
         <div class="col-12">
         </div>
@@ -39,6 +34,19 @@
             <div class="d-grid gap-2 col-sm-12 col-md-12 col-lg-6 mx-auto">
                 <a href="https://chat.whatsapp.com/GkT8zt5fhZC3fMhO4r3rRs" class="btn btn-success m-auto"
                     role="button">Click to Join Whatsapp Group</a>
+            </div>
+
+            <div class="row">
+                <div class="col-3">
+                    <p><br></p>
+                    <img src="IMG/DA.gif" class="img-fluid w-100" alt="...">
+                </div>
+                <div class="col-9">
+                    <h6 class=" fw-bold text-danger"><br><br>පාඨමාලාව සම්බන්ධව සහ එහිදි ලැබෙන නිබන්ධන සම්බන්ධව පූර්ණ විස්තරයක් පහත
+                        දැක්වේ.
+                        <br>
+                    </h6>
+                </div>
             </div>
 
             <h3 class="text-center fw-bold"><br>Spoken English - Diploma Course</h3>
@@ -71,7 +79,8 @@
         </div>
     </div>
 
-    <p class="m-3 text-danger "><b><u>පහතින් දැක්වෙන්නේ අප පාඨමාලාවේ ඉගැන්වීම් කරනු ලබන නිබන්ධන කිහිපයකි.</u></b> <br><br></p>
+    <p class="m-3 text-danger "><b><u>පහතින් දැක්වෙන්නේ අප පාඨමාලාවේ ඉගැන්වීම් කරනු ලබන නිබන්ධන කිහිපයකි.</u></b>
+        <br><br></p>
 
 
     <h6>&nbsp;&nbsp; &#10148; Book 01 : <b>Grammar Beginner Level</b><br></h6>
