--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     role="button">Click to Join Whatsapp Group</a>
             </div>
 
-            <div class="row">
+            <!-- <div class="row">
                 <div class="col-3">
                     <p><br></p>
                     <img src="IMG/DA.gif" class="img-fluid w-100" alt="...">
@@ -47,7 +47,7 @@
                         <br>
                     </h6>
                 </div>
-            </div>
+            </div> -->
 
             <h3 class="text-center fw-bold"><br>Spoken English - Diploma Course</h3>
             <p><br>අපගේ නවතම Diploma පාඨමාලාව සමග ඔබටත් දැන් සම්බන්ධ විය හැක. <br><br>
